# pytest_learning

./: .coveragerc.unit  .gitignore  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  testing.md
scripts/: run_e2e_durations.ps1  run_integration_local.ps1  run_integration_moto.ps1  run_localcheck.ps1
src/: handler.py  repo_dynamo.py  service.py
src/pytest_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  events.py  facrories.py  factories.py  pyproject.tom
tests/e2e/: conftest.py  test_profile_flow.py
tests/integration/: conftest.py  test_dynamo_flow.py
tests/unit/: conftest.py  test_handler.py  test_keys.py  test_service.py
