[project]
name = "pytest_learning"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "boto3",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-xdist",
]

integration = [
  "boto3",
  "moto[boto3]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: tests with dynamodb (moto/local)",
  "e2e: end-to-end style tests through handler with persistence",
]
filterwarnings = [
  "error::DeprecationWarning",
]